# chronos-monorepo

./: README.md  docker-compose.yml  go.mod  go.work  go.work.sum
clients/go/chronos-client/: client.go  go.mod  go.sum
clients/rust/chronos-client/: Cargo.toml  build.rs
clients/rust/chronos-client/examples/: basic_usage.rs
clients/rust/chronos-client/src/: lib.rs
durable-engine/: .dockerignore  Cargo.toml  Dockerfile  README_MIGRATIONS.md
durable-engine/.sqlx/: query-*.json
durable-engine/migrations/: 20250107_120000_init_schema.sql
durable-engine/src/: api.rs  client.rs  database.rs  engine.rs  main.rs  models.rs  queue.rs
executor/: Dockerfile  go.mod  go.sum  main.go
observatory/: Dockerfile  go.mod  go.sum  main.go
proto/: durable_engine.proto  executor.proto  scheduler.proto  worker.proto
scheduler/: Dockerfile  go.mod  go.sum  main.go
scripts/: build.sh  deploy.sh  gen-protos.sh  test.sh
worker-pool/: Dockerfile  go.mod  go.sum  main.go
