[package]
name = "durable-engine"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A state machine that guarantees the persistence and correct execution of individual tasks"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
tonic = "0.9.2"
prost = "0.11.9"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
chrono = { version = "0.4.24", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.12.0"
futures = "0.3.28"
anyhow = "1.0.71"
thiserror = "1.0.40"
async-trait = "0.1.68"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
rdkafka = { version = "0.32.0", features = ["cmake-build"] }

[build-dependencies]
tonic-build = "0.9.2"
