[package]
name = "durable-engine"
version = "0.1.0"
edition = "2021"
authors = ["nutcase <mauricee423@gmail.com>"]
description = "A state machine that guarantees the persistence and correct execution of individual tasks"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
tonic = "0.14.2"
prost = "0.14.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
chrono = { version = "0.4.24", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
opentelemetry = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.30.0"
futures = "0.3.28"
anyhow = "1.0.71"
thiserror = "2.0.16"
async-trait = "0.1.68"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
rdkafka = { version = "0.38.0", features = ["cmake-build"] }

[build-dependencies]
tonic-build = "0.14.2"
