[package]
name = "chronos-client"
version = "0.1.0"
edition = "2021"
description = "Rust client library for Project Chronos"
license = "MIT"

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
anyhow = "1.0.75"
tracing = "0.1.37"
opentelemetry = { version = "0.20.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.13.0", features = ["trace"] }
chrono = { version = "0.4.31", features = ["serde"] }
async-trait = "0.1.73"

[build-dependencies]
tonic-build = "0.9.2"
